<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_title_username"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/signup_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/signup_edit_username"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin"
            android:text="@string/signup_title_email"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/signup_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/signup_edit_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin"
            android:text="@string/signup_title_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/signup_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/signup_edit_password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signup_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/signup_submit_button"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/signup_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/margin"
            android:text="@string/signup_to_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textIsSelectable="false" />

        <ProgressBar
            android:id="@+id/signup_progressbar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            tools:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>